# ice9_ugi_basestation

./: .gitignore  .gitmodules  README.md
basestation_ws/src/ice9_unitree_basestation/: CMakeLists.txt  README.md  package.xml
basestation_ws/src/ice9_unitree_basestation/config/: go1slam.rviz  go1slam_showcase.rviz  ps4.config.yaml  unitree.mvc
basestation_ws/src/ice9_unitree_basestation/launch/: basestation.launch
basestation_ws/src/ice9_unitree_basestation/launch/include/: mapviz.launch  teleop_joy.launch
basestation_ws/src/improved_local_planner/: CMakeLists.txt  README.md  package.xml
basestation_ws/src/improved_local_planner/cfg/: DBLocalPlannerReconfigure.cfg
basestation_ws/src/swri_transform_util/src/: transform_manager.cpp
install/: install_basestation.sh  setup_ubuntu.sh
install/files/: Unitree_Basestation.desktop  basestation.desktop.sh  basestation_launcher.desktop.sh
launcher/: launcher.py  launcher_ui.py  resources_rc.py  test.py
launcher/ui/: launcher.ui  re.py
launcher/ui/resources/: resources.qrc
launcher/util/: timeout_deco.py
